[package]
name = "adventofcode-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
image = "0.25.9"
itertools = "0.13.0"
regex = "1.11.1"
rayon = "1.10.0"
clap = { version = "4.5.23", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
arrayvec = "0.7.6"

[profile.release]
debug = true
